# anima

./: .gitmodules  CMakeLists.txt  GLSL.lua  README.md  anima_launcher  animation.lua  camera.lua  canvas.lua  common.lua  easing.lua  init.lua  matrixffi.lua  movie.lua  par_shapes.lua  perlinnoise.lua  tex_procs.lua  textures.lua  utils.lua  vector.lua
GLSL/: GLSL_camera.lua  GLSL_color.lua  GLSL_perlin.lua
LuaJIT/: CMakeLists.txt
LuaJIT-IPOL/: CMakeLists.txt  inpaint.lua
LuaJIT-IPOL/brox/: CMakeLists.txt  brox.cpp  brox.lua
LuaJIT-IPOL/brox/sms_optic_flow_2.0/rof_parallel/: Makefile  README.txt  bicubic_interpolation.h  brox_optic_flow.h  gaussian.h  iio.c  iio.h  main.cpp  mask.h  zoom.h
LuaJIT-IPOL/horn/: CMakeLists.txt  horn.c  horn.lua
LuaJIT-IPOL/tvl1/: CMakeLists.txt  tvl1.c  tvl1.lua
LuaJIT-IPOL/tvl1/tvl1flow_3/: tvl1flow_lib.c
LuaJIT-par/: CMakeLists.txt  msquares.c  par_msquares.lua  par_shapes.lua
anima/: CG3.lua  GLSL.lua  GLSLNEW.lua  Object3D.lua  README.md  TA.lua  animation.lua  camera.lua  camera2.lua  canvas.lua  cdataser.lua  cdataser0.lua  color.lua  common.lua  font_utils.lua  glmatrix.lua  gui.lua  igwidgets.lua  init.lua  matrixffi.lua  mesh.lua  movie.lua  par_shapes.lua  path.lua  perlinnoise.lua  rotations.lua  syncdirs.lua  tex_procs.lua  textures.lua  time.lua  utils.lua  vicimag.lua
anima/CG3/: CDTinsertion.lua  Delaunay.lua  EarClip.lua  FIST.lua  FIST2.lua  PolySimplify.lua  Pset.lua  Spline.lua  TriangSweep.lua  algorithm.lua  base.lua  check_poly.lua  convex_hull.lua  init.lua  segment_intersection.lua
anima/GLSL/: GLSL_camera.lua  GLSL_color.lua  GLSL_sdf.lua
anima/algorithm/: avl_tree.lua  bstree.lua  combinatorics.lua  ffi_avl.lua  priority_queue.lua
anima/fonter/: fonter.lua  freetype_h.lua  generator.bat  generator.lua  glu_tesselator.lua  tess2b3.lua  test8.lua
anima/fonter/spline_files/: aaa1.spline  aaa1_co.spline  aaaa.spline  aacrossed1.spline  aacrossed1_inv.spline  aacrossed1b.spline  aacrossed2.spline  aacrossed2_inv.spline  aacrossed3.spline  aacrossed3_invhole.spline  aacrossed4.spline  aacrossed4_inv.spline  aacrossed4_tri.spline  aacrossed4_tri2.spline  aacrossed4_tri3.spline  aacrossed5.spline  aacrossed5_tri.spline  aacrossed5_tri_inv.spline  aacrossed5b.spline  aacrossed5c.spline  aacrossed5d.spline  aaedgecommon.spline  aaedgecommon2.spline  aaedgecommon3.spline  aaedgecommon4.spline  aaedgecommonb.spline  aaedgecommonc.spline  aaedgecommond.spline  aaedgecommone.spline  aaedgecommone2.spline  aaedgecommone3.spline  aaedgecommone3a.spline  aaedgecommone3b.spline  aaedgecommonf.spline  aaedgecommonf2.spline  aaex.spline  aaex_inv.spline  aatouchedpoint.spline  aatouchedpoint_inv.spline  aatouchedpointb.spline  (+76 more)
anima/fonter/trapezoidal/: SplineTessel.lua  trapezoidal.lua  trapezoidal_ListPrio.lua
anima/graphics/: FMMmodule.lua  GIMPmodule.lua  blob.lua  color.lua  criminisi.lua  glsl_reduce.lua  inpaintFMM.lua
anima/modeling/: CDTins.lua  HeightEditor.lua  Objects.lua  Objects2.lua  Shapes.lua  SpHeight.lua  Spline.lua  Spline3D.lua  mesh_image.lua  mesh_imageNOBLEND.lua  plane_picker.lua  rhomboidsM.lua
anima/plugins/: CTrgb.lua  ColorKmeans.lua  FFT.lua  GLFolderClip.lua  GLTextClip.lua  LABfx.lua  LABfxW.lua  LABfxW2.lua  LCHfx.lua  Spline.lua  SplineEditorBlur.lua  bilat_poisson.lua  bloom.lua  color_transparency.lua  color_transparency2.lua  crominance_blur.lua  edgegrad.lua  emboss.lua  extrudecolor.lua  extrudecolor_glsl.lua  flood_fill.lua  flow_mesh_player.lua  flow_player.lua  flow_player_pos.lua  flow_player_posOLD.lua  gaussianblur.lua  gaussianblur2.lua  gaussianblur3.lua  generate_gaussian_kernel.lua  gradient.lua  gradientMontajes.lua  histogram.lua  histogram2.lua  image_mirror.lua  layermixer_blend.lua  layermixer_blend2.lua  layermixer_blendBAK.lua  leveltoZ.lua  liquid.lua  local_histogramStark.lua  (+21 more)
anima/shaders/: ashima.lua
examples/: delaunay_particles.lua  lab_viewer.lua
examples/GPUdrum/: circ_buf_audio.lua  drum_audio_compute.lua  drum_play.lua  ring_scsp.lua
examples/LuaJIT-IPOL/opticflow/: main.lua  savecompresseddir.lua  syncdirs.lua
examples/compute_shader/: compute_shader.lua
examples/inpaint/: FMM.lua  FMMff.lua  FMMspl.lua  GIMP.lua  GIMPff.lua  GIMPspl.lua  criminisi.lua  criminisi_extend_spl.lua  criminisi_ff.lua  criminisi_spl.lua  golf.spline  golf_ext.spline
examples/juliaSet/: julia.lua
examples/juliaSet/Shaders/: qjFragES2.glsl  qjVert.glsl
examples/modeling/heart/: corazon.lua  corazon.preset
examples/modeling/house/: casa.preset  house.lua  houseObjects.lua
examples/par_shapes/: shapes_connect.lua
examples/shadertoy/: bacteria.lua
ffi-reflect/: reflect.lua
luanoise/: CMakeLists.txt  luasimplexnoise.cpp  simplexnoise.cpp  simplexnoise.h
luapower/: lfs_fs.lua  setluapower.lua  time.lua
luapower/tests/: test_compare.lua  test_compare2.lua  test_compare3.lua  test_fs2.lua
plugins/: GLFolderClip.lua  GLTextClip.lua  LABfx.lua  LABfxW.lua  LABfxW2.lua  SplineEditorBlur.lua  bilat_poisson.lua  color_transparency2.lua  flow_player.lua  gaussianblur2.lua  gradient.lua  histogram.lua  histogram2.lua  layermixer_blend.lua  layermixer_blend2.lua  layermixer_blendBAK.lua  leveltoZ.lua  liquid.lua  lod_blur.lua  mask.lua  multi_sample.lua  photofx.lua  photofxBAK.lua  photofxOLD.lua  photopos.lua  sphere.lua  super_sample.lua  texture_processor.lua
shaders/: loader.lua
